<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/color_0A9159">

        <TextView
            android:id="@+id/tv_mainHead_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/widget_size_50"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_25" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/widget_size_50"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_head_lable"
                android:textSize="@dimen/font_size_18"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_mainHead_userAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userAccount"
                android:textSize="@dimen/font_size_18"
                android:textColor="@android:color/white"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/widget_size_120"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_function_consumption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layout_btn_side"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher_round" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/font_size_16"
                        android:text="@string/function_consumption"
                        android:layout_marginTop="@dimen/widget_size_10" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_function_print"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layout_btn_side"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher_round" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/font_size_16"
                        android:text="@string/function_print"
                        android:layout_marginTop="@dimen/widget_size_10" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_function_signin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layout_btn_side"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher_round" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/font_size_16"
                        android:text="@string/function_signin"
                        android:layout_marginTop="@dimen/widget_size_10" />

                </LinearLayout>




            </LinearLayout>




        </LinearLayout>



    </LinearLayout>


</LinearLayout>