<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_e3e3e3"
    tools:context=".Sign.SignManagerActivity">

    <include layout="@layout/view_head"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/widget_size_10"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_size_120"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_signManager_signIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layout_btn_side"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_size_16"
                    android:text="@string/signin"
                    android:layout_marginTop="@dimen/widget_size_10" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_signManager_signOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layout_btn_side"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_size_16"
                    android:text="@string/signout"
                    android:layout_marginTop="@dimen/widget_size_10" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_signManager_userSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/layout_btn_side"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_size_16"
                    android:text="@string/user_signin"
                    android:layout_marginTop="@dimen/widget_size_10" />

            </LinearLayout>




        </LinearLayout>




    </LinearLayout>


</LinearLayout>